[gd_scene load_steps=3 format=3 uid="uid://rua13xrlp8sd"]

[ext_resource type="Script" path="res://Scripts/SetInstallDir.gd" id="1_xwhgm"]
[ext_resource type="Script" path="res://Scripts/InstallHat.gd" id="2_n5t6w"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -33.0
offset_right = 250.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="InstallDir" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
script = ExtResource("1_xwhgm")

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/InstallDir"]
custom_minimum_size = Vector2(474, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Set Install Directory..."
editable = false

[node name="Browse" type="Button" parent="VBoxContainer/InstallDir"]
layout_mode = 2
text = "..."

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/InstallDir/Browse"]
title = "Open a Directory"
initial_position = 1
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="HATVersion" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("2_n5t6w")

[node name="Refresh" type="Button" parent="VBoxContainer/HATVersion"]
layout_mode = 2
text = "Refresh"

[node name="Chooser" type="OptionButton" parent="VBoxContainer/HATVersion"]
layout_mode = 2

[node name="Install" type="Button" parent="VBoxContainer/HATVersion"]
layout_mode = 2
text = "Install!"

[node name="Log" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
focus_mode = 2
scroll_following = true
selection_enabled = true

[connection signal="pressed" from="VBoxContainer/InstallDir/Browse" to="VBoxContainer/InstallDir" method="_on_browse_pressed"]
[connection signal="dir_selected" from="VBoxContainer/InstallDir/Browse/FileDialog" to="VBoxContainer/InstallDir" method="_on_file_dialog_dir_selected"]
[connection signal="pressed" from="VBoxContainer/HATVersion/Refresh" to="VBoxContainer/HATVersion" method="_on_refresh_pressed"]
[connection signal="pressed" from="VBoxContainer/HATVersion/Install" to="VBoxContainer/HATVersion" method="_on_install_pressed"]
